# lisp.cpp

./: CMakeLists.txt  LICENSE  README.md  core.lisp  evaluator.cpp  evaluator.h  expr.cpp  parser.cpp
.github/workflows/: coverage.yml
include/lisp/: compiler.h  evaluator.h  lexer.h  meta.h  metaParser.h  parser.h  vm.h
sample/: CMakeLists.txt  compile.cpp  interpret.cpp  loop.cpp
src/: CMakeLists.txt  compiler.cpp  evaluator.cpp  primitiveProcedure.cpp  vm.cpp
test/: CMakeLists.txt
test/lisp/: CMakeLists.txt  test.cpp  testCompiler.cpp  testVm.cpp
